--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Cayman theme
+title: Don's Booger Collection
 description: Cayman is a clean, responsive theme for GitHub Pages.
 show_downloads: true
 google_analytics:
