--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Don's Booger Collection
 description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
 remote_theme: pages-themes/cayman@v0.2.0
