--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Don's Booger Collection
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Don's NotePad
+description: Nothing to see here...Move along
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
